--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 FLASK_APP=app
 FLASK_DEBUG=1
-SQLALCHEMY_DATABASE_URI=postgresql://zkpeiyqs:dp9c-3j3rCx55luSN3FufBpmFuOvw96w@bubble.db.elephantsql.com/zkpeiyqs
+SQLALCHEMY_DATABASE_URI=postgresql://madimtkq:JmoKFwf_TPTmwczgnkL6hH58O_CQX_nL@mahmud.db.elephantsql.com/madimtkq
